some spacing fixes

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -303,7 +303,7 @@ form#login input[type="password"] {
   font-size: 2.2rem;
   margin-bottom: 14px; }
 .posts footer.padded-footer, .post footer.padded-footer {
-  padding-top: 24px; }
+  padding-top: 20px; }
 .posts article h1, .posts article h2, .posts article h3, .post article h1, .post article h2, .post article h3 {
   margin-top: 40px; }
 .posts article p, .post article p {
