--- a/public/stylesheets/sass/_posts.sass
+++ b/public/stylesheets/sass/_posts.sass
@@ -20,7 +20,7 @@
     font-size: 2.2rem
     margin-bottom: 14px
   footer.padded-footer
-    padding-top: 24px
+    padding-top: 20px
   article
     h1, h2, h3
       margin-top: 40px
